--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -86,75 +86,84 @@
 <section class="services-offer">
   <div class="container">
       <div class="services-heading">
-          <h4><span class="text-primary">Services</span> we offer to cater your <span class="text-primary">business needs</span></h4>
+          <h4>WE CATER TO YOUR NEEDS</h4>
+          <div class="step-image">
+            <img src="/assets/images/sample/line.svg" />
+          </div>
       </div>
       <div class="service-body">
         <div class="row">
           <div class="col-md-4">
               <div class="service" routerLink="/services/user-experience">
-                <div class="service-icon">
+                <!-- <div class="service-icon">
                     <img src="/assets/images/services/one.png" alt="UX Consulting"/>
-                </div>
-                <h4>USER EXPERIENCE</h4>
+                </div> -->
+                <h4>DIGITAL TRANSFORMATION</h4>
                 <p>We believe research brings insights, our consultants connect with your business and end-users to build a better solutions to drive the business.</p>
-                <a class="bttn">Show More</a>
+                <!-- <a class="bttn">Show More</a> -->
               </div>
           </div>
           <div class="col-md-4">
             <div class="service" routerLink="/services/interface-design">
-                <div class="service-icon">
+                <!-- <div class="service-icon">
                   <img src="/assets/images/services/two.png" alt="UI Design"/>
-                </div>
-                <h4>INTERFACE DESIGN</h4>
+                </div> -->
+                <h4>PRODUCT DEVELOPMENT</h4>
                 <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
-                <a class="bttn">Show More</a>
+                <!-- <a class="bttn">Show More</a> -->
             </div>
         </div>
         <div class="col-md-4">
           <div class="service" routerLink="/services/ui-dev">
-            <div class="service-icon">
+            <!-- <div class="service-icon">
               <img src="/assets/images/services/three.png" alt="UI Development" />
-            </div>
-            <h4>UI DEVELOPMENT</h4>
+            </div> -->
+            <h4>STARTUPS</h4>
             <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
               execute it pixel perfect.</p>
-            <a class="bttn">Show More</a>
+            <!-- <a class="bttn">Show More</a> -->
           </div>
         </div>
         </div>
         <div class="row">
            <div class="col-md-4">
                 <div class="service" routerLink="/services/end-to-end">
-                  <div class="service-icon">
+                  <!-- <div class="service-icon">
                     <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
-                  </div>
-                  <h4>END TO END DEVELOPMENT</h4>
+                  </div> -->
+                  <h4>MOBILE APPS</h4>
                   <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL.</p>
-                  <a class="bttn">Show More</a>
+                  <!-- <a class="bttn">Show More</a> -->
                 </div>
           </div>
           <div class="col-md-4">
             <div class="service"  routerLink="/services/usability-testing">
-              <div class="service-icon">
+              <!-- <div class="service-icon">
                 <img src="/assets/images/services/five.png" alt="Usablity Testing"/>
-              </div>
-              <h4>USABILITY TESTING</h4>
+              </div> -->
+              <h4>ENTERPRISE APPLICATIONS</h4>
               <p>By means of Usability Testing techniques we evaluate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience.</p>
-              <a class="bttn">Show More</a>
+              <!-- <a class="bttn">Show More</a> -->
             </div>
       </div>
           <div class="col-md-4 redirect">
             <a href="https://uxmint.in/" target="_blank">
               <div class="service">
-                <div class="service-icon">
+                <!-- <div class="service-icon">
                   <img src="/assets/images/services/six.png" alt="Training"/>
-                </div>
-                <h4>UX TRAINING</h4>
+                </div> -->
+                <h4>INFORMATION PORTALS</h4>
                 <p>Transform your workforce with cheery picked courses making them business focused and future ready.</p>
-                <a class="bttn">Show More</a>
+                <!-- <a class="bttn">Show More</a> -->
               </div> </a>
           </div>
         </div>
+      </div>
+
+      <div class="row service-button">
+        <div class="col-md-12">
+        <a class="bttn">READ MORE</a> 
+      </div>
       </div>
   </div>
 </section>
@@ -163,7 +172,10 @@
 <!-- Solutions -->
 <div class="solutions">
   <div class="solution-heading">
-    <h4>Our <span class="text-primary">solutions </span> are helping <span class="text-primary">audience</span></h4>
+    <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+    <div class="step-image">
+      <img src="/assets/images/sample/line.svg" />
+    </div>
   </div>
   <div class="solution-body">
     <ngu-carousel class="solutions-carousel" #solutionCarousel [inputs]="solutionsCarouselConfig" [dataSource]="solutions">
@@ -214,36 +226,47 @@
 <section class="our-clients">
   <div class="container">
     <div class="our-client-header">
-        <h3>Our Clients</h3>
+        <h3>OUR CLIENTS</h3>
+        <div class="step-image">
+          <img src="/assets/images/sample/line.svg" />
+        </div>
     </div>
     <div class="our-client-body">
         <div class="row">
-            <div class="col-sm-3 client">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-1"></div>
+            <div class="col-sm-2 client">
                   <img src="/assets/images/our-clients/logo010.png" alt="">
             </div>
-            <div class="col-sm-3 client">
+            <div class="col-sm-2 client">
                   <img src="/assets/images/our-clients/logo020.png" alt="">
             </div>
-            <div class="col-sm-3 client">
+            <div class="col-sm-2 client">
                   <img src="/assets/images/our-clients/logo030.png" alt="">
             </div>
-            <div class="col-sm-3 client">
+            <div class="col-sm-2 client">
                 <img src="/assets/images/our-clients/logo040.png" alt="">
           </div>
+          <div class="col-sm-1"></div>
+          <div class="col-sm-1"></div>
           </div>
           <div class="row">
-            <div class="col-sm-3 client">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-1"></div>
+            <div class="col-sm-2 client">
                   <img src="/assets/images/our-clients/logo050.png" alt="">
             </div>
-            <div class="col-sm-3 client1">
+            <div class="col-sm-2 client">
                   <img src="/assets/images/our-clients/logo060.png" alt="">
             </div>
-            <div class="col-sm-3 client">
+            <div class="col-sm-2 client">
                   <img src="/assets/images/our-clients/logo070.png" alt="">
             </div>
-            <div class="col-sm-3 client">
+            <div class="col-sm-2 client">
                 <img src="/assets/images/our-clients/logo080.png" alt="">
           </div>
+          <div class="col-sm-1"></div>
+          <div class="col-sm-1"></div>
           </div>
     </div>
   </div>
@@ -251,7 +274,10 @@
 <!-- /Our Clients -->
 <!-- Our-team-->
 <div class="our-team">
-      <h1>Our Team</h1>
+      <h1>OUR TEAM</h1>
+      <div class="step-image">
+        <img src="/assets/images/sample/line.svg" />
+      </div>
 </div>
 <app-our-team></app-our-team>
 <!-- /Our-team-->
