--- a/src/app/components/our-team/our-team.component.html
+++ b/src/app/components/our-team/our-team.component.html
@@ -4,12 +4,12 @@
 </div>
 <div class="container">
 <div class="row">
-  <div class="col-sm-5">
-    <h2>“There is always a<span class="highlight"> better</span> way to do it </h2>
-    <h2>But we have to <span class="highlight">find</span> it“</h2>
+  <div class="col-sm-6">
+    <h2>"THERE IS ALWAYS A<span class="highlight"> BETTER</span> WAY TO DO IT </h2>
+    <h2>BUT WE HAVE TO <span class="highlight">FIND</span> IT"</h2>
    <p>- Thomas Alva Edison</p>
   </div>
-  <div class="col-sm-2"></div>
+  <div class="col-sm-1"></div>
   <div class="col-sm-5">
     <h6>Provide Meaningful design solution for products which
       amplifies human ability resulting in harmony between
@@ -21,7 +21,7 @@
         and innovation to school and college students which
         helps us to build a better environment</h6>
         <div class="build-next-product-body">
-          <a class="btn btn-primary enquire" routerLink="/contact-us">Join our Team</a>
+          <a class="btn btn-primary enquire" routerLink="/contact-us"><span>Join our Team</span></a>
       </div>
   </div>
 </div>
