--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,7 +91,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <div class="footer-logo"><img src="/assets/images/logo2.png" alt="Uxmint"></div>
+        <div class="footer-logo"><img src="/assets/images/sample/logo.svg" alt="Uxmint"></div>
         <address class="mb-0">
           <fa-icon [icon]="['fas','map-marker-alt']"></fa-icon>
           <p>KCV Towers, 2nd floor,</p>
