--- a/src/app/components/enquiry-footer/enquiry-footer.component.html
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.html
@@ -9,7 +9,7 @@
       </div>
       </div>
       <div class="col-sm-2">
-          <a class="btn btn-primary enquire" routerLink="/contact-us">Enquire</a>
+          <a class="btn btn-primary enquire" routerLink="/contact-us"><span>Enquire</span></a>
       </div>
       <div class="col-sm-1"></div>
     </div>
