--- a/src/app/components/enquiry-footer/enquiry-footer.component.scss
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.scss
@@ -3,20 +3,23 @@
 @import "~bootstrap/scss/mixins";
 @import '../../../scss/colors';
 .footer{
-    background-color: #60D6C9;
+    background-color: #212121;
     text-align: center;
     margin-bottom: 0px;
+    color: #FFFFFF;
     h5{
-        font-size: 30px;
-        font-weight: 500;
+        font-size: 24px;
+        font-weight: 400;
+        font-family: 'Segoe UI Web (West European)';
         text-align: left;
         margin-left: 10px;
         margin-bottom: 20px;
-        margin-top: 6px;
+        //margin-top: 6px;
     }
     h2{
-        font-size: 35px;
-        font-weight: 300;
+        font-size: 24px;
+        font-weight: 400;
+        font-family: 'Segoe UI Web (West European)';
         text-align: left;
         margin-left: 10px;
         margin-bottom: 30px;
@@ -37,13 +40,18 @@
     }
     .btn.enquire {
         cursor: pointer;
-        color: #FFF;
+        //color: #FFF;
         border-radius: 5px;
-        font-size: 16px;
+        font-size: 15px;
         padding: 12px 36px;
-        font-weight: 700;
-        background-color: #313030;
+        font-weight: 400;
+        font-family: 'Segoe UI Web (West European)';
+        background-color: #FDEE78;
+        border-color: unset;
         margin-bottom: 28px;
+        // span{
+        //     color: #FFFFFF;
+        // }
     }
  img {
     margin-right: 11px;
@@ -52,6 +60,10 @@
     }
     .contacts{
         font-size: 20px;
+        a{
+        color: #FFFFFF;
+        font-size: 14px;
+        }
     }
     .col-sm-4{
         padding-left: 0px;
@@ -68,17 +80,19 @@
         padding-left: 10px;
         padding-right: 10px;
         h5{
-            font-size: 20px;
-            font-weight: 500;
+            font-size: 17px;
+            font-weight: 400;
+            font-family: 'Segoe UI Web (West European)';
             text-align: left;
             margin-left: 10px;
             margin-bottom: 10px;
             padding-left: 0px;
-            margin-top: 4px;
+            //margin-top: 4px;
         }
         h2{
-            font-size: 25px;
-            font-weight: 300;
+            font-size: 17px;
+            font-weight: 400;
+            font-family: 'Segoe UI Web (West European)';
             text-align: left;
             margin-left: 10px;
             margin-bottom: 20px;
