--- a/src/app/components/our-team/our-team.component.scss
+++ b/src/app/components/our-team/our-team.component.scss
@@ -24,20 +24,20 @@ font-style: 'Roboto';
 h2{
     font-size: 24px;
     font-weight: 300;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 h6{
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 300;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 37px;
     margin-bottom: 22px;
     text-align: justify;
 }
 p{
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 300;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto', sans-serif;
     text-align:right;
 }
 .build-next-product-body {
@@ -47,14 +47,18 @@ p{
 .build-next-product-body .btn.enquire {
     cursor: pointer;
     color: #FFF;
-    background-color: #60D6C9;
-    font-family: 'Inter', sans-serif;
+    background-color: #FDEE78;
+    border-color: unset;
+    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    font-weight: 400;
     border-radius: 5px;
     padding: 11px 25px;
     margin-left: -23px;
     margin-top: 17px;
+    span{
+        color: #000000;
+    }
 }
 .container{
     margin-top: 50px;
